--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		</div>
 	</div>
 
-	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+	<div class="divider"></div>
 
 	<!-- Featured project -->
 	<div class="section">
@@ -134,7 +134,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		</div>
 	</div>
 
-	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+	<div class="divider"></div>
 
 	<!-- Featured project -->
 	<div class="section">
@@ -150,7 +150,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		</div>
 	</div>
 
-	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+	<div class="divider"></div>
 
 	<!-- Featured project -->
 	<div href="rsvpd.html">
