updated rsvpd and l&d

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div class="full-width" style="background-color: #F29407; height: 65vh;">
+	<div class="full-width" style="background-color: #F29407; height: 75vh;">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<h4>Fall 2019 • Deloitte Digital</h4>
@@ -52,6 +52,7 @@
 			<h3>
 				I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.
 			<h3>
+			<div class="short-divider"></div>
 			<p>	
 				My team was tasked with replacing a federal aid program's legacy inventory management system with a Salesforce web application and an accompanying iOS mobile iPad app. The system is scheduled to launch Summer 2020.
 			</p>
@@ -72,7 +73,7 @@
 		</div>
 	</div>
 
-	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+	<div class="divider"></div>
 
 	<div class="panel">
 		<h3 class="left">Table of Contents</h4>
@@ -98,6 +99,8 @@
 				</ul>
 		</div>
 	</div>
+
+	<div class="divider"></div>
 
 	<div class="panel" id="summary">
 		<h3 class="left">Project Summary</h3>
@@ -256,6 +259,8 @@
 		</div>
 	</div>
 
+	<div class="divider"></div>
+
 	<div class="panel" id="web-design">
 		<h3 class="left">Web Design Overview</h3>
 		<div class="body right">
@@ -331,6 +336,8 @@
 		</div>
 	</div>
 
+	<div class="divider"></div>
+
 	<div class="panel" id="web-design-errors">
 		<h3 class="left">Errors</h3>
 		<div class="body right">
@@ -352,7 +359,7 @@
 		</div>
 	</div>
 
-v
+	<div class="full-width">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/fms/web-errors.png">
 		</div>
@@ -436,6 +443,8 @@ v
 		</div>
 	</div>
 
+	<div class="divider"></div>
+
 	<div class="panel" id="mobile-design-2">
 		<h3 class="left">Browse & Select</h3>
 		<div class="body right">
@@ -482,6 +491,8 @@ v
 		</div>
 	</div>
 
+	<div class="divider"></div>
+
 	<div class="panel" id="mobile-design-3">
 		<h3 class="left">Review & Submit</h3>
 		<div class="body right">
@@ -500,6 +511,8 @@ v
 				</ul>
 		</div>
 	</div>
+
+	<div class="divider"></div>
 
 	<div class="panel" id="mobile-design-4">
 		<h3 class="left">Order History</h3>
