trying to get navbar to animate

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 </head>
 
-<div id="my-nav" class="nav-colored">
+<header class="nav">
 	<img src="pics/ep-logo.svg" class="nav-logo" href="index.html"> 
 	<div id="nav-items">   
 		<a class="nav-item" id="home-nav-item" href="index.html"><h4>Home</h4></a>
@@ -46,7 +46,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<a class="nav-item" id="home-nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()"><h4>Resume</h4></a>
 	</div>
 	<div id="hamburger" class="fas fa-bars" onclick="toggleNav()"></div>
-</div>
+</header>
 
 <body class="preload">
 <meta name="viewport" content="width=device-width">
