--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<h4>Summer 2020 • Deloitte Digital</h4>
 			<h2 style="color: #FE7062">FHA Branding Refresh</h2>
 			<div class="short-divider"></div>
-			<h3>Part I of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
+			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
 				<h4 style="color: black">Learn More</h4>
 			</button>
