--- a/l&d.html
+++ b/l&d.html
@@ -39,8 +39,10 @@
 		<div class="full-width" style="background-color: #8D63B0; height: 75vh;">
 		  	<div class="title-wrapper animate-reveal animate-first">
 	            <div class="title">
-	                <h4>Summer 2018 • Deloitte Digital Internship</h4>
-	                <h1>L&D Portal</h1>
+	                <div>
+	                	<h4>Summer 2018 • Deloitte Digital</h4>
+	                	<h1>L&D Portal</h1>
+	            	</div>
 	            </div>
 		  	</div>
 
@@ -88,7 +90,7 @@
 	  	<div class="divider"></div>
 
 	  	<div class="panel">
-	  	<h3 class="left">Process</h3>
+	  	<h2 class="left">Process</h2>
 	  	<div class="body right">
 	  		<p>I followed the classic double-diamond process for this 6-week project, splitting each phase into roughly a two-week sprint. </p>
 	  		<p>In the 'Discover' phase, I did a Heuristic Evaluation of the existing portal and conducted 20 interviews and 2 usability tests with users and stakeholders.</p> 
@@ -101,7 +103,7 @@
 		<div class="divider"></div>
 
 	  	<div class="panel">
-		<h3 class="left">Heuristic Evaluation</h3>
+		<h2 class="left">Heuristic Evaluation</h2>
 		 	<div class="body right">
 		  	<p>My first step in understanding the existing portal (and ripping it to shreds) was to evaluate it based on <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Nielsen's ten heuristics for usability</a>. Going through this process helped me pick apart major issues with the site and allowed me to familiarize myself with its features so I was better prepared going into interviews. </p>
 		  	<p>I started by printing out all the pages I want to evaluate and circling features or functionality that seemed flawed. I then went back through and categorized each flaw. View the full report <a href="pics/l&d/heuristiceval.pdf">here</a>.</p>
@@ -112,7 +114,7 @@
 		<div class="divider"></div>
 
 		<div class="panel">
-		<h3 class="left">Interviews</h3>
+		<h2 class="left">Interviews</h2>
 		<div class="body right">
 			<p>Before speaking to anyone, I determined who I needed to talk to in order to cover all potential user and stakeholder groups and created a <a href="pics/l&d/interview-script.pdf">script</a>. I divided the specific questions into general categories - Continuing Education, Approval Process, and Existing Portal. I knew it was important not to constrain myself by rigorously following a list of questions during interviews, so I used them as a starting off point and allowed the interviews to feel more like conversations. </p>
 			<p>Throughout one week, I interviewed 20 individuals: 9 requesters, 5 approvers, 3 administrators, 2 developers, and 1 talent representative.
@@ -130,7 +132,7 @@
 		<div class="divider"></div>
 
 		<div class="panel">
-		<h3 class="left">Initial Usability Testing</h3>
+		<h2 class="left">Usability Testing</h2>
 		<div class="body right">
 			<p>I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="pics/l&d/usability-script.pdf">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating.</p>
   			<img class="pic-right" src="pics/l&d/initial-landing.png">
@@ -141,7 +143,7 @@
 		</div>
 
 		<div class="panel">
-		<h3 class="left">Affinity Mapping</h3>
+		<h2 class="left">Affinity Mapping</h2>
 		<div class="body right">
 			<p>In order to identify underlying needs and perspectives among the diverse group of interviewees, I led a team of UX designers and Product Managers in extracting salient points from the interviews into almost 400 individual user notes. Each individual note constitutes a single belief, experience, opinion, concern or need.</p>
 			<p>
@@ -174,7 +176,7 @@
 		<div class="divider"></div>
 
 		<div class="panel">
-			<h3 class="left">Personas</h3>
+			<h2 class="left">Personas</h2>
 			<div class="body right">
 				<p>From the numerous interview subjects, four categories stuck out: Requesters, Approvers, Administrators, and Leadership. Each has a distinct role and goals:</p>
 
@@ -202,7 +204,7 @@
 		<div class="divider"></div>
 
 		<div class="panel">
-		<h3 class="left">Product Visioning Session</h3>
+		<h2 class="left">Product Visioning Session</h2>
 		<div class="body right">
 			
 			<p>Having synthesized most of the qualitative data, the next step was to create a broad vision for the portal in order to brainstorm and prioritize specific features - this was my way of bridging the gap between research and design.</p>
@@ -231,7 +233,7 @@
 		<div class="divider"></div>
 
 		<div class="panel">
-			<h3 class="left">User Stories</h3>
+			<h2 class="left">User Stories</h2>
 			<div class="body right">
 				<p>The next logical step was to create prioritized user stories for each user group. View the full document <a href="">here.</a>  </p>
 			  	
@@ -243,7 +245,7 @@
 		<div class="divider"></div>
 
 		<div class="panel">
-			<h3 class="left">Business Process Modeling</h3>
+			<h2 class="left">Business Process Modeling</h2>
 			<div class="body right">
 				<p>The current approval process is a one-size-fits all process that is in no way tailored to the request or user. So, an essential piece of this portal redesign was also redesigning the underlying process behind the portal. I started by breaking up the process into two user groups, by practitioner level: Analysts - Senior Consultants, and Managers and above. At the Manager level, it is likely that your counselor is an administrator, which creates redundancies. </p>
 				<p>The second big divide that needed to be addressed was cost - inexpensive requests like a $10 online course should not have to go through several levels of approval, rather, they can be auto-approved if the practitioner is below a certain threshold. I took these issues, as well as several other factors, when creating the flows below.</p>
@@ -258,7 +260,7 @@
 		</div>
 
 		<div class="panel">
-		<h3 class="left">Wireframes</h3>
+		<h2 class="left">Wireframes</h2>
 		<div class="body right">
 			
 			<p>There are three separate levels of unique screens. Shown is my initial brainstorm for the requester landing page.</p>
@@ -296,7 +298,7 @@
 		  </div>
 
 		<div class="panel">
-		<h3 class="left">Visual Design</h3>
+		<h2 class="left">Visual Design</h2>
 			
 			<div class="body right">
 			<p>After incorporating feedback from usability testing, I moved on to visual design. I used Deloitte Digital branding, so I created a simplified style guide based on the lengthy existing style guide.</p>
@@ -307,7 +309,22 @@
 		</div>
 		</div>
 
+<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+
 <div id="projects">
+
+	<div class="section" style="margin-top: 5%">
+		<img class="project-pic" src="pics/fha.png" style="background-color: #FE7062">
+		<div class="project-info">
+			<h4>Summer 2020 • Deloitte Digital</h4>
+			<h2 style="color: #FE7062">FHA Branding Refresh</h2>
+			<div class="short-divider"></div>
+			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
+			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
+				<h4 style="color: black">Learn More</h4>
+			</button>
+		</div>
+	</div>
 
 	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
 	<!-- Featured project -->
@@ -319,22 +336,6 @@
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
-			</button>
-		</div>
-	</div>
-
-	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
-
-	<!-- Featured project -->
-	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: #8D63B0">
-		<div class="project-info">
-			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: #8D63B0">Learning & Development Portal</h2>
-			<div class="short-divider"></div>
-			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
-			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
 				<h4 style="color: black">Learn More</h4>
 			</button>
 		</div>
