--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,10 @@
-<div id="my-nav" class="nav-colored">
+<header class="nav">
 	<img src="pics/ep-logo.svg" class="nav-logo" href="index.html"> 
 	<div id="nav-items">   
-		<a class="nav-item" href="about.html" href="index.html#about">About</a>
-		<a class="nav-item" id="home-nav-item" href="index.html#projects" onclick="toggleNav()">Projects</a>
-		<a class="nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()">Resume</a>
+		<a class="nav-item" id="home-nav-item" href="index.html"><h4>Home</h4></a>
+		<a class="nav-item" id="home-nav-item" href="index.html#about"><h4>About</h4></a>
+		<a class="nav-item" id="home-nav-item" href="index.html#projects" onclick="toggleNav()"><h4>Projects</h4></a>
+		<a class="nav-item" id="home-nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()"><h4>Resume</h4></a>
 	</div>
 	<div id="hamburger" class="fas fa-bars" onclick="toggleNav()"></div>
-</div>
+</header>
