removed nav and footer working code from home

--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,17 @@
 <div id="contact">
+  <div class="divider" style="background-color: #858585; margin-bottom: 5%"></div>
   
   <div id="container">
-    <div class="contact-text" style="width: 30vw">
+    <div class="contact-text" style="width: 40vw; margin-left: 0">
       <h2 style="color: #F29407">Emily Porat</h2> 
       <h2 style="color: #FE7062">Digital Designer</h2>
     </div>
 
     <div class="contact-text">
       <h3>Projects</h3>
+        <p><a href="fha.html">FHA Branding Refresh</a></p>
         <p><a href="fms-pos.html">Food Management System</a></p>
         <p><a href="rsvpd.html">RSVP'd</a></p>
-        <p><a href="justharvest.html">Community Table</a></p>
         <p><a href="l&d.html">L&D Portal</a></p>
     </div>
      
