--- a/index.html
+++ b/index.html
@@ -37,20 +37,9 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 </head>
 
-<header class="nav">
-	<img src="pics/ep-logo.svg" class="nav-logo" href="index.html"> 
-	<div id="nav-items">   
-		<a class="nav-item" id="home-nav-item" href="index.html"><h4>Home</h4></a>
-		<a class="nav-item" id="home-nav-item" href="index.html#about"><h4>About</h4></a>
-		<a class="nav-item" id="home-nav-item" href="index.html#projects" onclick="toggleNav()"><h4>Projects</h4></a>
-		<a class="nav-item" id="home-nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()"><h4>Resume</h4></a>
-	</div>
-	<div id="hamburger" class="fas fa-bars" onclick="toggleNav()"></div>
-</header>
-
 <body class="preload">
 <meta name="viewport" content="width=device-width">
-
+<div id="nav"></div>
 
 <div id="home">
 
@@ -172,33 +161,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 </meta>
 </body>
 
-<!-- <div id="footer"></div> -->
+<div id="footer"></div>
 
-<div id="contact">
-	<div class="divider" style="background-color: #858585; margin-bottom: 5%"></div>
-  
-  <div id="container">
-    <div class="contact-text" style="width: 40vw; margin-left: 0">
-      <h2 style="color: #F29407">Emily Porat</h2> 
-      <h2 style="color: #FE7062">Digital Designer</h2>
-    </div>
-
-    <div class="contact-text">
-      <h3>Projects</h3>
-        <p><a href="fha.html">FHA Branding Refresh</a></p>
-        <p><a href="fms-pos.html">Food Management System</a></p>
-        <p><a href="rsvpd.html">RSVP'd</a></p>
-        <p><a href="l&d.html">L&D Portal</a></p>
-    </div>
-     
-    <div class="contact-text">
-      <h3>Contact</h3>
-        <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
-        <p style="color: white">(650) 996 - 8836</p>
-        <p><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
-    </div>
-  </div>
-  <p id="copyright">© Emily Porat 2020</p>
-</div>
 <script src="js/general.js"></script>
 </html>
