--- a/fha.html
+++ b/fha.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div class="full-width" style="background-color: #FE7062; height: 75vh;">
+	<div class="full-width" style="background-color: #FE7062; height: 75vh; margin-top: 120px">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
