fixed padding on rsvpd

--- a/rsvpd.html
+++ b/rsvpd.html
@@ -45,7 +45,7 @@
             </div>
 	  	</div>      
       
-      	<img src="pics/rsvpd/cover2.png" class="big-pic" style="height: 65vh; height: 65vh; width: auto; padding-left: 40%">
+      	<img src="pics/rsvpd/cover2.png" class="big-pic" style="height: 65vh; width: auto; padding-left: 40%; padding-right: 0%">
       </div>
 
 
