--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <header class="nav">
-	<img src="pics/ep-logo.svg" class="nav-logo" href="index.html"> 
+	<a href="index.html"><img src="pics/ep-logo.svg" class="nav-logo"></a>
 	<div id="nav-items">   
 		<a class="nav-item" id="home-nav-item" href="index.html"><h4>Home</h4></a>
 		<a class="nav-item" id="home-nav-item" href="index.html#about"><h4>About</h4></a>
