--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
 
-<link rel="icon" type="image/x-icon" href="pics/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="pics/favicon.svg" />
 <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
