--- a/fha.html
+++ b/fha.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
 	<link rel="stylesheet" type="text/css" href="styles/projects.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="pics/favicon.svg"/>
 	<!-- Icons -->
 	<script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
