--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="styles/global.css">
     <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
-    <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.svg" />
     <!-- Icons -->
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
