fixed about page to be consistent

--- a/about.html
+++ b/about.html
@@ -40,11 +40,11 @@
       <div id="about">
           
             <div class="panel context">
-                <div class="header" style="width: 100%; margin: 0%; margin-bottom: 5%; margin-top: 5%">About Emily</div>
+                <h1 style="width: 100%; margin: 0%; margin-bottom: 5%; margin-top: 5%">About Emily</h1>
                 <div class="divider"></div>
               <img id="about-pic" src="pics/about/emily4.jpg">
               <div class="body" id="about-description">
-                Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, graduated from Carnegie Mellon University in 2019, and I'm currently living in Washington DC and working at Deloitte Digital. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
+                <p>Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, graduated from Carnegie Mellon University in 2019, and I'm currently living in Washington DC and working at Deloitte Digital. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.</p>
                 <p>
                 My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
                 </p>
