updated footer text and color

--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
   <div id="container">
     <div class="contact-text" style="width: 40vw; margin-left: 0">
       <h2 style="color: #F29407">Emily Porat</h2> 
-      <h2 style="color: #FE7062">Digital Designer</h2>
+      <h2 style="color: #8D63B0">UX Designer</h2>
     </div>
 
     <div class="contact-text">
