updating fha page and mobile global styles

--- a/fha.html
+++ b/fha.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Emily Porat | FHA Branding Refresh</title>
+	<title>Emily Porat | FHA Website Redesign</title>
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
@@ -40,7 +40,7 @@
 			<div class="title">
 				<div>
 					<h4>Summer 2020 • Deloitte Digital</h4>
-					<h1 style="color: black">FHA Branding Refresh</h1>
+					<h1 style="color: black">FHA Website Redesign</h1>
 				</div>
 			</div>
 		</div>
@@ -52,27 +52,62 @@
 		<div class="context-summary">
 			<h4>Context</h4>
 			<h3>
-				I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.
+				As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.
 			<h3>
 			<div class="short-divider"></div>
 			<p>	
-				More info coming soon!
+				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted preliminary research, including a heuristic evaluation and stakeholder interviews. Moving forward, we aim to thoroughly understand user goals and challenges so we can overhaul the site’s underlying information architecture.
 			</p>
 		</div>
 
 		<div class="context-specifics">
 			<h4>Length</h4>
-			<div class="context-description"><p>4 weeks</p></div>
+			<div class="context-description"><p>9 months</p></div>
 			<h4>Team</h4>
-			<div class="context-description"><p>I was the lead designer on a small team of 6.</p></div>
+			<div class="context-description"><p>I co-lead research & design for a team of 12.</p></div>
 			<h4>Skills</h4> 
-			<div class="context-description"><p>Visual Design</p></div>
-			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract</p></div>
+			<div class="context-description"><p>Visual Design, User Research & Analysis</p></div>
+			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract, Excel</p></div>
 		</div>
 	</div>
 
 	<div class="divider"></div>
 
+	<div class="panel" id="summary">
+		<h2 class="left">Branding Refresh</h2>
+			<div class="body right">
+				<p>Before the long-term engagement began, step one was launching FHA.gov as a standalone site from its parent agency's site, HUD.gov. At that time, all FHA content was housed within various sections of HUD.gov. When it came to branding and style for the new FHA.gov, we had a couple of options. Another Deloitte team had already conducted a branding workshop and developed mood boards and social media guidance for FHA Catalyst, one of FHA's ongoing technology modernization initiatives, so I developed two style guides(see below): one with the original HUD branding, refreshed, and one with the FHA Catalyst branding, adapted from existing mood boards.</p>
+
+				<p>The client decided to move forward with the Catalyst branding. Given that this soft launch was meant to be a quick and light lift, we strategically selected a few key screens to redesign with the new branding, and carried over the underlying IA from the Housing portion of the HUD.gov site.</p>
+			</div>
+	</div>
+
+	<div class="full-width">
+		<div class="panel dark">
+			<img class="pic-left" src="pics/FHA/branding-options.png">
+		</div>
+	</div>
+
+	<div class="panel" id="summary">
+			<div class="body right">
+				<p>We launched <a href="www.FHA.gov">FHA.gov</a> on June 1, 2020, with a redesigned landing page, About page, Catalyst page, and COVID information page. All design decisions were based on assumptions and client priorities. For example, while FHA's primary customer is mortgage <i>lenders</i>, the client wanted to focus the new site on the <i>consumer</i> audience: homeowners and homebuyers.</p>
+				<p>Regardless of these constraints, I was still able to drastically improve the page-level architecture to make information more accessible and easy to comprehend. For example, I envisioned the COVID Resources page (below) as a template for future content pages. To optimize for readability and clarity, I applied:</p>
+				<ul>
+					<li>Clear and consistent use of headers and subheaders to facilitate content chunking.</li>
+					<li>Highlight boxes to make key information easier to pick out, catering to the human tendency to scan rather than read.</li>
+					<li>An interactive table of contents to provide an overview and easy page navigation so users can jump right to relevant topics.</li>
+				</ul>
+				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov.">
+			</div>
+	</div>
+
+	<div class="divider"></div>
+
+	<div class="panel" id="summary">
+		<h2 class="left">Preliminary Research</h2>
+			<div class="body right">
+			</div>
+	</div>
 	  	
   	<div id="footer"></div>
   	</meta>
