--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 
     <div class="contact-text">
       <h3>Projects</h3>
-        <p><a href="fha.html">FHA Branding Refresh</a></p>
+        <p><a href="fha.html">FHA Website Redesign</a></p>
         <p><a href="fms-pos.html">Food Management System</a></p>
         <p><a href="rsvpd.html">RSVP'd</a></p>
         <p><a href="l&d.html">L&D Portal</a></p>
